welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:81: error: Unmatched closing brace '}' ignored here
}
^